--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -15,6 +15,9 @@
             <li class="nav-item">
                 <a class="nav-link active" (click)="deconnexion()">Déconnexion</a>
             </li>
+            <li class="nav-item">
+             <a class="nav-link active" routerLink="/panier">Panier</a>
+            </li>
         </ul>
     </div>
 </nav>
