--- a/src/app/produits/produits.component.html
+++ b/src/app/produits/produits.component.html
@@ -3,9 +3,10 @@
     <div class="card-body">
         <div *ngFor="let produit of produits" class="card">
             <div class="card-text mx-auto">
-                {{produit['nom']}} ({{produit['type']}})
+                {{produit['nom']}} ({{produit['type']}}) 
+                {{produit['prix']}}
                  <div *ngIf="(user|async)">
-                     <button>mais achetez donc !</button>
+                     <button (click)="AjoutProduit(produit)">mais achetez donc !</button>
                     </div>
             </div>
         </div>
