--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,16 +7,22 @@
             <li class="nav-item">
                 <a class="nav-link disabled" routerLink="/produits">Liste des produits</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" routerLink="/Recherche">Recherche Produits</a>
+            </li>
         </ul>
         <ul *ngIf="(user|async)" class="navbar-nav">
-             <li class="nav-item">
+            <li class="nav-item">
                 <a class="nav-link active" routerLink="/produits">Liste des produits</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" routerLink="/Recherche">Recherche Produits</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active" (click)="deconnexion()">Déconnexion</a>
             </li>
             <li class="nav-item">
-             <a class="nav-link active" routerLink="/panier">Panier</a>
+                <a class="nav-link active" routerLink="/panier">Panier</a>
             </li>
         </ul>
     </div>
