--- a/src/app/panier/panier.component.html
+++ b/src/app/panier/panier.component.html
@@ -1,13 +1,17 @@
-
 <p>Panier</p>
 <div class="row justify-content-center">
     <div class="card-body">
         <div *ngFor="let produit of Panier" class="card">
             <div class="card-text mx-auto">
-                {{produit['nom']}} ({{produit['type']}}) 
-                {{produit['prix']}} {{produit['nbrExemplaire']}} 
-                     <button>supprimer</button>
-        
+                {{produit['nom']}}
+                ({{produit['type']}})
+                {{produit['prix']}} euros
+                <button (click)="diminuerExemplaire(produit)">-</button>
+                {{produit['nbrExemplaire']}}
+                <button (click)="AugmenterExemplaire(produit)">+</button>
+
+                <button (click)="supprimerProduit(produit)">supprimer</button>
+
             </div>
         </div>
         <button (click)="validerPanier()" routerLink="/panier">Valider Panier</button>
