--- a/src/app/inscription/inscription.component.html
+++ b/src/app/inscription/inscription.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit()" #inscriptionForm="ngForm">
+<form (ngSubmit)="onSubmit()" class="Forms" #inscriptionForm="ngForm">
     <label>Nom</label>
     <input type="text" class="form-control" required [(ngModel)]="utilisateur['nom']" 
     name="Nom"/>
