--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -21,8 +21,9 @@
             <li class="nav-item">
                 <a class="nav-link active" (click)="deconnexion()"><span>Déconnexion</span></a>
             </li>
-            <li class="nav-shop">
-                <a id="TextPanier" routerLink="/panier" class="button fancy-button"><i class="material-icons">shopping_cart</i>Panier</a>
+            <li class="nav-shop" style="float: right;">
+                <a id="TextPanier" routerLink="/panier" class="button fancy-button"><i class="material-icons" style="float: right;">shopping_cart</i>Panier</a>
+            </li>
         </ul>
     </div>
 </nav>
