--- a/src/app/panier/panier.component.html
+++ b/src/app/panier/panier.component.html
@@ -1,19 +1,22 @@
-<p>Panier</p>
+
 <div class="row justify-content-center">
     <div class="card-body">
         <div *ngFor="let produit of Panier" class="card">
-            <div class="card-text mx-auto">
-                {{produit['nom']}}
-                ({{produit['type']}})
-                {{produit['prix']}} euros
+            <div class="card-text">
+                <h2>Titre : {{produit['nom']}} </h2>
+                <p><span>Genre : </span>{{produit['type']}} </p>
+                <p><span>Auteur : </span>{{produit['auteur']}} </p>
+                 <p><span>Prix : </span>{{produit['prix']}} euros<p>
+              <p>
                 <button (click)="diminuerExemplaire(produit)">-</button>
                 {{produit['nbrExemplaire']}}
                 <button (click)="AugmenterExemplaire(produit)">+</button>
-
+              </p>
+              <p>
                 <button (click)="supprimerProduit(produit)">supprimer</button>
-
+              </p>
             </div>
         </div>
-        <button (click)="validerPanier()" routerLink="/panier">Valider Panier</button>
+        <button class="ValiderPanier" (click)="validerPanier()" routerLink="/panier">Valider Panier</button>
     </div>
 </div>
