--- a/src/app/produits/produits.component.html
+++ b/src/app/produits/produits.component.html
@@ -1,10 +1,11 @@
-<p>Produits</p>
 <div class="row justify-content-center">
     <div class="card-body">
         <div *ngFor="let produit of produits" class="card">
-            <div class="card-text mx-auto">
-                {{produit['nom']}} ({{produit['type']}}) 
-                {{produit['prix']}}
+            <div class="card-text">
+               <h2>Titre : {{produit['nom']}} </h2>
+               <p><span>Genre : </span>{{produit['type']}} </p>
+               <p><span>Auteur : </span>{{produit['auteur']}}</p>
+                <p><span>Prix : </span>{{produit['prix']}} euros<p>
                  <div *ngIf="(user|async)">
                      <button (click)="AjoutProduit(produit)">mais achetez donc !</button>
                     </div>
